--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon server.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/TonyDeleo98/Social-Network-API"
+        "type": "git",
+        "url": "git+https://github.com/TonyDeleo98/Social-Network-API"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/TonyDeleo98/Social-Network-API"
+        "url": "https://github.com/TonyDeleo98/Social-Network-API"
     },
     "homepage": "https://github.com/TonyDeleo98/Social-Network-API",
     "dependencies": {
-      "express": "^4.18.2",
-      "mongoose": "^7.0.2"
+        "express": "^4.18.2",
+        "mongoose": "^7.6.4"
     },
     "devDependencies": {
-      "nodemon": "^2.0.21"
+        "nodemon": "^3.0.1"
     }
-  }
+}
